package edu.fiuba.algo3.modelo.Ciudad.EstadoVisitas;

public interface IEstado {
    public int demoraEdificio();
    public IEstado siguiente();
}
